--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,5 +2,22 @@
 <resources>
     <color name="colorPrimary">#FF9800</color>
     <color name="colorPrimaryDark">#F57C00</color>
-    <color name="colorAccent">#03A9F4</color>
+    <color name="colorAccent">#8BC34A</color>
+    <color name="white">#ffffffff</color>
+    <color name="gray_light">#FFE9EAEC</color>
+    <color name="gray">#FFA8A8A8</color>
+    <color name="gray_black">#4A4A4A</color>
+    <color name="green">#37AB2F</color>
+    <color name="green_dark">#388E3C</color>
+    <color name="green_light">#C8E6C9</color>
+    <color name="primary_text">#212121</color>
+    <color name="secondary_text">#999999</color>
+    <color name="icons">#FFFFFF</color>
+    <color name="divider">#B6B6B6</color>
+    <color name="orange">#FFF46B23</color>
+    <color name="orange_solar">#FFF0A11F</color>
+    <color name="orange_light">#FFF8C013</color>
+    <color name="red">#ff0000</color>
+    <color name="red_dark">#d22525</color>
+    <color name="blue">#005dce</color>
 </resources>
