--- a/app/src/main/res/values/drawables.xml
+++ b/app/src/main/res/values/drawables.xml
@@ -1,8 +1,8 @@
 <resources>
-    <item name="ic_menu_camera" type="drawable">@android:drawable/ic_menu_camera</item>
-    <item name="ic_menu_gallery" type="drawable">@android:drawable/ic_menu_gallery</item>
-    <item name="ic_menu_slideshow" type="drawable">@android:drawable/ic_menu_slideshow</item>
-    <item name="ic_menu_manage" type="drawable">@android:drawable/ic_menu_manage</item>
-    <item name="ic_menu_share" type="drawable">@android:drawable/ic_menu_share</item>
-    <item name="ic_menu_send" type="drawable">@android:drawable/ic_menu_send</item>
+    <item name="ic_menu_home" type="drawable">@drawable/ic_home_black</item>
+    <item name="ic_menu_asset" type="drawable">@drawable/ic_asset_black</item>
+    <item name="ic_menu_report" type="drawable">@drawable/ic_report_black</item>
+    <item name="ic_menu_member" type="drawable">@drawable/ic_member_black</item>
+    <item name="ic_menu_setting" type="drawable">@drawable/ic_settings_black</item>
+    <item name="ic_menu_logout" type="drawable">@drawable/ic_logout_black</item>
 </resources>
