--- a/app/src/main/res/layout/fragment_asset.xml
+++ b/app/src/main/res/layout/fragment_asset.xml
@@ -4,6 +4,11 @@
     android:layout_height="match_parent"
     tools:context="com.iceoton.durable.fragment.MainFragment">
 
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/recycler_view"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:scrollbars="vertical" />
 
     <android.support.design.widget.FloatingActionButton
         android:id="@+id/fab"
