--- a/app/src/main/res/layout/asset_list_row.xml
+++ b/app/src/main/res/layout/asset_list_row.xml
@@ -13,7 +13,8 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:background="@android:color/white"
-            android:orientation="horizontal">
+            android:orientation="horizontal"
+            android:padding="@dimen/normal_padding">
 
             <LinearLayout
                 android:layout_width="0dp"
@@ -77,8 +78,18 @@
 
             <RelativeLayout
                 android:layout_width="80dp"
-                android:layout_height="match_parent">
+                android:layout_height="80dp"
+                android:layout_gravity="center">
 
+                <TextView
+                    android:id="@+id/txtQuantity"
+                    style="@style/Text.Normal"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:background="@drawable/bg_green_circle"
+                    android:gravity="center"
+                    android:text="xx"
+                    android:textColor="@color/white" />
             </RelativeLayout>
 
         </LinearLayout>
