--- a/app/src/main/res/layout/fragment_asset.xml
+++ b/app/src/main/res/layout/fragment_asset.xml
@@ -2,8 +2,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/gray"
-    tools:context="com.iceoton.durable.fragment.MainFragment">
+    android:background="@color/gray_light"
+    tools:context="com.iceoton.durable.fragment.HomeFragment">
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/recycler_view"
@@ -11,12 +11,12 @@
         android:layout_height="match_parent"
         android:scrollbars="vertical" />
 
-    <android.support.design.widget.FloatingActionButton
+    <!--<android.support.design.widget.FloatingActionButton
         android:id="@+id/fab"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="bottom|end"
         android:layout_margin="@dimen/fab_margin"
-        android:src="@drawable/ic_note_add_white" />
+        android:src="@drawable/ic_note_add_white" />-->
 
 </android.support.design.widget.CoordinatorLayout>
