--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,6 +4,7 @@
     <color name="colorPrimaryDark">#F57C00</color>
     <color name="colorAccent">#8BC34A</color>
     <color name="white">#ffffffff</color>
+    <color name="black">#000000</color>
     <color name="gray_light">#FFE9EAEC</color>
     <color name="gray">#FFA8A8A8</color>
     <color name="gray_black">#4A4A4A</color>
