--- a/app/src/main/res/layout/fragment_asset_detail.xml
+++ b/app/src/main/res/layout/fragment_asset_detail.xml
@@ -3,4 +3,9 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
+    <TextView
+        android:id="@+id/textJson"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" />
+
 </LinearLayout>
