--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -14,10 +14,10 @@
             android:id="@+id/nav_report"
             android:icon="@drawable/ic_menu_report"
             android:title="รายงาน" />
-        <item
+<!--        <item
             android:id="@+id/nav_member"
             android:icon="@drawable/ic_menu_member"
-            android:title="ผู้ใช้งานระบบ" />
+            android:title="ผู้ใช้งานระบบ" />-->
     </group>
 
     <item android:title="">
