--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -19,5 +19,9 @@
     <color name="orange_light">#FFF8C013</color>
     <color name="red">#ff0000</color>
     <color name="red_dark">#d22525</color>
-    <color name="blue">#005dce</color>
+    <color name="blue">#2196f3</color>
+    <color name="blue_darken_1">#1e88e5</color>
+    <color name="blue_darken_2">#1976d2</color>
+    <color name="blue_darken_3">#1565c0</color>
+    <color name="blue_darken_4">#0d47a1</color>
 </resources>
