- change app logo - change app theme color to blue

--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -13,6 +13,15 @@
         android:orientation="vertical"
         android:padding="8dp">
 
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:gravity="center"
+            android:textStyle="bold"
+            android:textColor="@color/black"
+            android:textSize="16sp"
+            android:text="โปรแกรมครุภัณฑ์และตรวจครุภัณฑ์"/>
+
         <ImageView
             android:id="@+id/image_logo"
             android:layout_width="128dp"
@@ -20,13 +29,15 @@
             android:layout_gravity="center_horizontal"
             android:layout_margin="8dp"
             android:contentDescription="@null"
-            android:src="@drawable/logo_256px" />
+            android:src="@drawable/logo_pwa_512px" />
 
         <EditText
             android:id="@+id/username"
             android:layout_width="match_parent"
             android:layout_height="50dp"
             android:layout_margin="8dp"
+            android:inputType="textEmailAddress"
+            android:nextFocusForward="@+id/password"
             android:hint="อีเมลผู้ใช้งาน" />
 
         <EditText
