--- a/app/src/main/res/drawable/side_nav_bar.xml
+++ b/app/src/main/res/drawable/side_nav_bar.xml
@@ -2,8 +2,8 @@
     android:shape="rectangle">
     <gradient
         android:angle="135"
-        android:centerColor="#FF9800"
-        android:endColor="#F57C00"
-        android:startColor="#FFF8C013"
+        android:centerColor="#1976D2"
+        android:endColor="#0D47A1"
+        android:startColor="#2196F3"
         android:type="linear" />
 </shape>
