--- a/app/src/main/res/layout/fragment_splash.xml
+++ b/app/src/main/res/layout/fragment_splash.xml
@@ -4,11 +4,11 @@
     android:background="#F1F5F7">
 
     <ImageView
-        android:layout_width="250dp"
-        android:layout_height="250dp"
+        android:layout_width="256dp"
+        android:layout_height="256dp"
         android:layout_gravity="center"
         android:contentDescription="@null"
-        android:src="@drawable/logo_256px" />
+        android:src="@drawable/logo_pwa_512px" />
 
 
 </FrameLayout>
