--- a/app/src/main/res/layout/activity_asset_list.xml
+++ b/app/src/main/res/layout/activity_asset_list.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".activity.LoginActivity">
+    tools:context=".activity.AssetListActivity">
 
     <include
         layout="@layout/app_bar_main"
