--- a/app/src/main/res/layout/fragment_asset_list.xml
+++ b/app/src/main/res/layout/fragment_asset_list.xml
@@ -1,9 +1,30 @@
-<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/gray"
+    android:orientation="vertical"
     tools:context="com.iceoton.durable.fragment.MainFragment">
+
+    <FrameLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:padding="16dp"
+        android:background="@color/green_500">
+
+        <EditText
+            android:id="@+id/editTextSearch"
+            android:layout_width="match_parent"
+            android:layout_height="48dp"
+            android:background="@drawable/round_corner_white_filled"
+            android:drawableLeft="@drawable/icon_left_magnify"
+            android:drawablePadding="@dimen/normal_padding"
+            android:gravity="center_vertical"
+            android:padding="@dimen/normal_padding"
+            android:hint="@string/hint_edit_text_search_asset"
+            android:textSize="@dimen/text_size_normal"/>
+
+    </FrameLayout>
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/recycler_view"
@@ -19,4 +40,4 @@
         android:layout_margin="@dimen/fab_margin"
         android:src="@drawable/ic_note_add_white" />-->
 
-</android.support.design.widget.CoordinatorLayout>
+</LinearLayout>
