--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,6 +9,7 @@
     <color name="gray">#FFA8A8A8</color>
     <color name="gray_black">#4A4A4A</color>
     <color name="green">#37AB2F</color>
+    <color name="green_500">#4caf50</color>
     <color name="green_dark">#388E3C</color>
     <color name="green_light">#C8E6C9</color>
     <color name="primary_text">#212121</color>
