--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -8,4 +8,10 @@
     <dimen name="fab_margin">16dp</dimen>
     <dimen name="normal_padding">8dp</dimen>
     <dimen name="normal_margin">8dp</dimen>
+
+    <dimen name="text_size_2xlarge">48sp</dimen>
+    <dimen name="text_size_xlarge">24sp</dimen>
+    <dimen name="text_size_large">19sp</dimen>
+    <dimen name="text_size_normal">15sp</dimen>
+    <dimen name="text_size_small">12sp</dimen>
 </resources>
