--- a/app/src/main/res/layout/fragment_asset_detail.xml
+++ b/app/src/main/res/layout/fragment_asset_detail.xml
@@ -2,12 +2,13 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/white"
-    android:orientation="vertical"
-    android:padding="@dimen/normal_padding">
+    android:orientation="vertical">
 
     <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="0dp"
+        android:layout_weight="1"
+        android:padding="@dimen/normal_padding">
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -161,5 +162,18 @@
         </LinearLayout>
 
     </ScrollView>
+
+    <Button
+        android:id="@+id/button_manage"
+        android:layout_width="match_parent"
+        android:layout_height="60dp"
+        android:background="@drawable/button_main"
+        android:foreground="?attr/selectableItemBackgroundBorderless"
+        android:gravity="center"
+        android:padding="@dimen/normal_padding"
+        android:text="@string/text_manage"
+        android:textColor="@color/white"
+        android:textSize="@dimen/text_size_xlarge"
+        android:textStyle="bold" />
 
 </LinearLayout>
