- can edit location and status of asset

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -17,6 +17,7 @@
     <color name="icons">#FFFFFF</color>
     <color name="divider">#B6B6B6</color>
     <color name="orange">#FFF46B23</color>
+    <color name="orange_dark">#c75417</color>
     <color name="orange_solar">#FFF0A11F</color>
     <color name="orange_light">#FFF8C013</color>
     <color name="red">#ff0000</color>
