--- a/app/src/main/res/drawable/btn_orange.xml
+++ b/app/src/main/res/drawable/btn_orange.xml
@@ -8,13 +8,13 @@
 
     <item android:state_pressed="true">
         <shape>
-            <solid android:color="@color/colorPrimaryDark" />
+            <solid android:color="@color/orange_dark" />
         </shape>
     </item>
 
     <item>
         <shape>
-            <solid android:color="@color/colorPrimary" />
+            <solid android:color="@color/orange" />
         </shape>
     </item>
 </selector>
