--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -6,10 +6,10 @@
 
     <ImageView
         android:id="@+id/btn_scan_qrcode"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="200dp"
+        android:layout_height="200dp"
         android:layout_gravity="center"
-        android:src="@drawable/scan_qr_code" />
+        android:src="@drawable/logo_pwa_512px" />
 
     <android.support.design.widget.FloatingActionButton
         android:id="@+id/fab"
