--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -16,7 +16,7 @@
     <color name="secondary_text">#999999</color>
     <color name="icons">#FFFFFF</color>
     <color name="divider">#B6B6B6</color>
-    <color name="orange">#FFF46B23</color>
+    <color name="orange">#ff7709</color>
     <color name="orange_dark">#c75417</color>
     <color name="orange_solar">#FFF0A11F</color>
     <color name="orange_light">#FFF8C013</color>
